[package]
name = "audioviz"
version = "0.3.0"
authors = ["Luca <b.lucab1211@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A modular and simple libary to make raw and realtime audiodata visually more appealing."
readme = "README.md"
repository = "https://github.com/BrunoWallner/audioviz"
keywords = ["audio", "FFT", "conversion"]
categories = ["multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"
apodize = "1.0.0"
splines = "4.0.3"
serde = { version = "1.0.130", features = ["derive"]}