[package]
name = "audioviz"
version = "0.4.4"
authors = ["Luca <b.lucab1211@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a simple and easy to use library that helps you visualise raw audio-data"
readme = "README.md"
repository = "https://github.com/BrunoWallner/audioviz"
keywords = ["audio", "FFT", "conversion"]
categories = ["multimedia::audio"]

[features]
default = ["cpal"]

[dependencies]
rustfft = "6.0.1"
apodize = "1.0.0"
splines = "4.0.3"
serde = { version = "1.0.130", features = ["derive"], optional = true}
cpal = { "version" = "0.13.4", optional = true }
log = "0.4.14"
