[package]
name = "audioviz"
version = "0.4.4"
authors = ["Luca <b.lucab1211@gmail.com>"]
edition = "2018"
license = "MIT"
description = "a simple and easy to use library that helps you visualise raw audio-data"
readme = "README.md"
repository = "https://github.com/BrunoWallner/audioviz"
keywords = ["audio", "FFT", "conversion"]
categories = ["multimedia::audio"]

[features]
default = ["std", "audio_capture", "distributor", "spectrum"]
audio_capture = ["std", "cpal"]
distributor = []
spectrum = ["fft", "apodize", "splines"]
fft = ["rustfft"]
std = []

[dependencies]
# for spectrum
apodize = { version = "1.0.0", optional = true }
splines = { version = "4.0.3", optional = true }

serde = { version = "1.0.130", features = ["derive"], optional = true}
cpal = { "version" = "0.13.4", optional = true }
log = "0.4.14"

# for fft
rustfft = { version = "6.0.1", optional = true }
